--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <nav><a href="study.html">Checkout another</a></nav>
-    
+    <div class="text">Christmas is coming🎄🎅🏻❄️</div>
     <div class="scene">
 
         <div class="tree">
